<resources>
    <string name="app_name">ImpactAlert</string>
    <string name="help_me">HELP ME!!</string>
    <string name="email">Email</string>
    <string name="crash_image">crash Image</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="city">City</string>
    <string name="department">Department</string>
    <string name="helper">Helper</string>
    <string name="client">Client</string>
    <string name="set_latitude">Latitude \n %s</string>
    <string name="set_longitude">Longitude \n %s</string>
    <string name="set_country_name">Country Name \n %s</string>
    <string name="set_locality">Locality \n %s</string>
    <string name="set_address">Address \n %s</string>
    <string name="ask_for_help">--- Ask For help ---</string>
    <string name="share_your_location">Share Your Location</string>
    <string name="share_my_current_location">Share My Current Location</string>
    <string name="send_sos_notification">Send SOS Notification</string>
    <string name="locality">Locality</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country_name">Country Name</string>
    <string name="address">Address</string>
</resources>